fix: fix pricing-toggle-functions

--- a/templates/market.html
+++ b/templates/market.html
@@ -41,7 +41,8 @@
   <div class="container">
     <div class="section-heading">
       <h2 class="integrator-subheading heading-md text-center">
-        Битрикс24.Маркет Плюс — это <span class="primary">обширный каталог</span> решений, расширяющих возможности вашей системы Битрикс24
+        Битрикс24.Маркет Плюс — это <span class="primary">обширный каталог</span> решений, расширяющих возможности вашей
+        системы Битрикс24
       </h2>
     </div>
     <div class="integrator-task">
@@ -52,9 +53,12 @@
           </span>
           <div class="interesting-image"><img src="{% static '/image/icons/task-2.png' %}" alt="image alt"
               class="inline-svg" /></div>
-          <h3 class="interesting-title">Расширяют стандартные функции CRM, задач и проектов, контакт-центра и других инструментово</h3>
-          <p class="integrator-text">В каталоге Битрикс24 Маркет плюс для вас доступно более 3000 приложений и бизнес сценариев.</p>
-          <p class="integrator-text">Шаблоны сайтов, чат-боты, готовые решения для CRM, мессенджеры и многое другое — за фикисрованную цену и без ограничений устанавливайте все, что вам необходимо.</p>
+          <h3 class="interesting-title">Расширяют стандартные функции CRM, задач и проектов, контакт-центра и других
+            инструментово</h3>
+          <p class="integrator-text">В каталоге Битрикс24 Маркет плюс для вас доступно более 3000 приложений и бизнес
+            сценариев.</p>
+          <p class="integrator-text">Шаблоны сайтов, чат-боты, готовые решения для CRM, мессенджеры и многое другое —
+            за фикисрованную цену и без ограничений устанавливайте все, что вам необходимо.</p>
         </div>
         <div class="interesting-point">
           <span class="poin-number">
@@ -62,9 +66,11 @@
           </span>
           <div class="interesting-image"><img src="{% static '/image/icons/task-5.png' %}" alt="image alt"
               class="inline-svg" /></div>
-          <h3 class="interesting-title">Добавляют интеграции со сторонними сервисами, которые помогают автоматизировать бизнес-процессы</h3>
+          <h3 class="interesting-title">Добавляют интеграции со сторонними сервисами, которые помогают автоматизировать
+            бизнес-процессы</h3>
           <p class="integrator-text">Быстрое и удобное подключение сервисов:</p>
-          <p class="integrator-text">Телефония, платёжные системы, службы доставки, обмен данными с 1С, соц.сети и мессенджеры, голосовые помощники, видеоконференции, СМС-рассылки и многие другие.</p>
+          <p class="integrator-text">Телефония, платёжные системы, службы доставки, обмен данными с 1С, соц.сети
+            и мессенджеры, голосовые помощники, видеоконференции, СМС-рассылки и многие другие.</p>
         </div>
       </div>
       <div class="integrator-task-two">
@@ -74,9 +80,12 @@
           </span>
           <div class="interesting-image"><img src="{% static '/image/service/prodlenie-1.png' %}" alt="image alt"
               class="inline-svg" /></div>
-          <h3 class="interesting-title">Повышают эффективность работы компании за счёт персонализированных инструментов и готовых модулей</h3>
+          <h3 class="interesting-title">Повышают эффективность работы компании за счёт персонализированных инструментов
+            и готовых модулей</h3>
           <p class="integrator-text">Во все платные тарифы Битрикс24 включён REST API без ограничений.</p>
-          <p class="integrator-text">Вы сможете самостоятельно добавлять сторонние сервисы в свой Битрикс 24. С помощью локальных приложений и вебхуков у вас будут работать индивидуальные сценарии — все, для вашего удобства и эффективной работы</p>
+          <p class="integrator-text">Вы сможете самостоятельно добавлять сторонние сервисы в свой Битрикс 24. С помощью
+            локальных приложений и вебхуков у вас будут работать индивидуальные сценарии — все, для вашего удобства
+            и эффективной работы</p>
         </div>
         <div class="interesting-point point-color">
           <div class="point-color__image">
@@ -166,21 +175,21 @@
     <div class="integrator-price">
       <div class="integrator_pricing-control-block price" bis_skin_checked="1">
         <div class="pricing-control" bis_skin_checked="0">
-          <span data-pricing-trigger="pricing-0" data-target="oblako" class="active">Облачная версия</span>
-          <span data-pricing-trigger="pricing-0" data-target="korobka" class="">Коробочная версия</span>
+          <span data-pricing-trigger="pricing-1" data-target="oblako" class="active">Облачная версия</span>
+          <span data-pricing-trigger="pricing-1" data-target="korobka">Коробочная версия</span>
         </div>
       </div>
-      <div class="plans-3 mt-5" data-plan-id="pricing-1" data-plan-active="korobka" data-plan-active="oblako">
+      <div class="plans-3 mt-5" data-plan-id="pricing-1" data-plan-active-obl="oblako">
         <div class="plan plan-short plan-base">
           <div class="plan__header">
             <div class="service-card__title">Интернет-магазин+CRM</div>
           </div>
           <div class="plan__content">
             <div class="plan-description">
-              <h3 class="plan__title">2 089, 20 byn</h3>
+              <h3 class="plan__title" data-oblako-12="2089.20 byn" data-korobka-12="2200 byn">2 089, 20 byn</h3>
               <p>Количество пользователей</p>
               <div class="price__counts">
-                <a href="#" class="integrator-btn integrator-btn-white white-active btn-fill--up">
+                <a href="#" class="integrator-btn integrator-btn-white white-active btn-fill--up" data-users="12">
                   <span>12</span>
                 </a>
               </div>
@@ -196,19 +205,21 @@
           </div>
           <div class="plan__content">
             <div class="plan-description">
-              <h3 class="plan__title">4 197, 60 byn</h3>
+              <h3 class="plan__title" data-oblako-50="2089.20 byn" data-oblako-100="4197.60 byn"
+                data-oblako-250="5000 byn" data-oblako-500="6500 byn" data-korobka-50="2200 byn"
+                data-korobka-100="4300 byn" data-korobka-250="5100 byn" data-korobka-500="5600 byn">4 197, 60 byn</h3>
               <p>Количество пользователей</p>
               <div class="price__counts">
-                <a href="#" class="integrator-btn integrator-btn-white btn-fill--up">
+                <a href="#" class="integrator-btn integrator-btn-white btn-fill--up" data-users="50">
                   <span>50</span>
                 </a>
-                <a href="#" class="integrator-btn integrator-btn-white btn-fill--up">
+                <a href="#" class="integrator-btn integrator-btn-white btn-fill--up" data-users="100">
                   <span>100</span>
                 </a>
-                <a href="#" class="integrator-btn integrator-btn-white btn-fill--up">
+                <a href="#" class="integrator-btn integrator-btn-white btn-fill--up" data-users="250">
                   <span>250</span>
                 </a>
-                <a href="#" class="integrator-btn integrator-btn-white white-active btn-fill--up">
+                <a href="#" class="integrator-btn integrator-btn-white white-active btn-fill--up" data-users="500">
                   <span>500</span>
                 </a>
               </div>
@@ -224,10 +235,11 @@
           </div>
           <div class="plan__content">
             <div class="plan-description">
-              <h3 class="plan__title dynamic-value" data-yearly="352 byn" data-monthly="439 byn">4 197, 60 byn</h3>
+              <h3 class="plan__title dynamic-value" data-oblako-1000="4 197, 60 byn" data-korobka-1000="5100 byn">4 197, 60 byn
+              </h3>
               <p>Количество пользователей</p>
               <div class="price__counts">
-                <a href="#" class="integrator-btn integrator-btn-white white-active btn-fill--up">
+                <a href="#" class="integrator-btn integrator-btn-white white-active btn-fill--up" data-users="1000">
                   <span>1000</span>
                 </a>
               </div>
